crates/formatter/tests/snapshots/snapshots__anki__storage__upgrades__schema11_downgrade.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table config;
drop table deck_config;
drop table tags;
drop table fields;
drop table templates;
drop table notetypes;
drop table decks;
drop index idx_cards_odid;
drop index idx_notes_mid;
update col set ver = 11;
