crates/formatter/tests/snapshots/snapshots__anki__storage__upgrades__schema17_upgrade.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table tags;
create table tags (
	tag text collate unicase not null primary key,
	usn integer not null,
	collapsed boolean not null,
	config blob null
) without rowid;
